[gd_scene load_steps=4 format=2]

[ext_resource path="res://Area2D.gd" type="Script" id=1]
[ext_resource path="res://art/TrainingDummy.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 10, 57.925 )

[node name="WizardNPC" type="Node"]

[node name="Area2D" type="Area2D" parent="." index="0"]

position = Vector2( 1860, 150 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="Area2D" index="0"]

scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Offset", "Region", "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D" index="1"]

shape = SubResource( 1 )

[node name="Name" type="Label" parent="Area2D" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -60.0
margin_top = -80.0
margin_right = 65.0
margin_bottom = -49.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Mago dos Upgrades"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="QuestionLabel" type="Label" parent="Area2D" index="3"]

editor/display_folded = true
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -90.0
margin_top = -140.0
margin_right = 93.0
margin_bottom = -70.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Deseja fazer algum upgrade?"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="MenuButtons" type="VBoxContainer" parent="Area2D/QuestionLabel" index="0"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -10.0
margin_top = 20.0
margin_right = 190.0
margin_bottom = 90.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Rect" ]

[node name="YesButton" type="MenuButton" parent="Area2D/QuestionLabel/MenuButtons" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 200.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
action_mode = 0
enabled_focus_mode = 0
shortcut = null
group = null
text = "Sim"
flat = false
align = 1
items = [  ]

[node name="NoButton" type="MenuButton" parent="Area2D/QuestionLabel/MenuButtons" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 24.0
margin_right = 200.0
margin_bottom = 44.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
action_mode = 0
enabled_focus_mode = 0
shortcut = null
group = null
text = "Não"
flat = false
align = 1
items = [  ]

[node name="ItemList" type="ItemList" parent="Area2D" index="4"]

editor/display_folded = true
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 110.0
margin_top = -220.0
margin_right = 250.0
margin_bottom = -60.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
items = [  ]
select_mode = 0
allow_reselect = false
max_columns = 3
icon_mode = 1
fixed_icon_size = Vector2( 0, 0 )

[node name="Skill1Label" type="Label" parent="Area2D/ItemList" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 10.0
margin_top = 40.0
margin_right = 50.0
margin_bottom = 60.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Skill 1"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="UPButton" type="Button" parent="Area2D/ItemList/Skill1Label" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 70.0
margin_right = 128.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 1
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "^"
flat = false
align = 1

[node name="Skill2Label" type="Label" parent="Area2D/ItemList" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 10.0
margin_top = 80.0
margin_right = 50.0
margin_bottom = 94.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Skill 2"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="UPButton" type="Button" parent="Area2D/ItemList/Skill2Label" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 70.0
margin_right = 128.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 1
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "^ "
flat = false
align = 1

[node name="YesButtonUP" type="Button" parent="Area2D/ItemList" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 10.0
margin_top = 130.0
margin_right = 60.0
margin_bottom = 150.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Sim"
flat = false
align = 1

[node name="NoButtonUP" type="Button" parent="Area2D/ItemList" index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 80.0
margin_top = 130.0
margin_right = 130.0
margin_bottom = 150.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Não"
flat = false
align = 1

[node name="Label" type="Label" parent="Area2D/ItemList" index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 280.0
margin_bottom = 60.0
rect_scale = Vector2( 0.7, 0.7 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Escolha as skills que deseja:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect" ]

[node name="InsuPointsLabel" type="Label" parent="Area2D" index="5"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 130.0
margin_top = -200.0
margin_right = 264.0
margin_bottom = -140.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Pontos insuficientes!"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Timer" type="Timer" parent="Area2D/InsuPointsLabel" index="0"]

process_mode = 1
wait_time = 2.0
one_shot = true
autostart = false

[node name="SucessPointsLabel" type="Label" parent="Area2D" index="6"]

editor/display_folded = true
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 50.0
margin_top = -110.0
margin_right = 257.0
margin_bottom = -80.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Upgrade realizado com sucesso!"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Timer2" type="Timer" parent="Area2D/SucessPointsLabel" index="0"]

process_mode = 1
wait_time = 2.0
one_shot = true
autostart = false

[connection signal="pressed" from="Area2D/QuestionLabel/MenuButtons/YesButton" to="Area2D" method="_on_YesButton_pressed"]

[connection signal="pressed" from="Area2D/QuestionLabel/MenuButtons/NoButton" to="Area2D" method="_on_NoButton_pressed"]

[connection signal="pressed" from="Area2D/ItemList/YesButtonUP" to="Area2D" method="_on_YesButtonUP_pressed"]

[connection signal="pressed" from="Area2D/ItemList/NoButtonUP" to="Area2D" method="_on_NoButtonUP_pressed"]

[connection signal="timeout" from="Area2D/InsuPointsLabel/Timer" to="Area2D" method="_on_Timer_timeout"]

[connection signal="timeout" from="Area2D/SucessPointsLabel/Timer2" to="Area2D" method="_on_Timer_timeout"]


